testdata/baselines/reference/submodule/conformance/typedefScope1.errors.txt
typedefScope1.js(3,16): error TS2304: Cannot find name 'B'.
typedefScope1.js(9,16): error TS2304: Cannot find name 'B'.
typedefScope1.js(13,12): error TS2304: Cannot find name 'B'.


==== typedefScope1.js (3 errors) ====
    function B1() {
        /** @typedef {number} B */
        /** @type {B} */
                   ~
!!! error TS2304: Cannot find name 'B'.
        var ok1 = 0;
    }
    
    function B2() {
        /** @typedef {string} B */
        /** @type {B} */
                   ~
!!! error TS2304: Cannot find name 'B'.
        var ok2 = 'hi';
    }
    
    /** @type {B} */
               ~
!!! error TS2304: Cannot find name 'B'.
    var notOK = 0;
    